--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.39.3",
     "next": "14.1.0",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
