--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/ssr": "^0.5.0",
@@ -20,8 +19,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.0.1",
-    "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
