--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.45.1",
     "next": "14.1.0",
+    "nodemailer": "^6.9.14",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.2",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.0.1",
     "zustand": "^4.5.5"
   },
@@ -27,7 +26,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "supabase": "^1.136.3",
+    "supabase": "^1.191.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
