--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.0.1",
+    "use-debounce": "^10.0.3",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
@@ -28,6 +29,6 @@
     "postcss": "^8",
     "supabase": "^1.191.3",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   }
 }
