--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.14.0",
     "use-debounce": "^10.0.3",
     "zustand": "^4.5.5"
   },
